--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{comment}
 \usepackage[dvipdfmx]{graphicx}
 \usepackage[top=30truemm,bottom=30truemm,left=20truemm,right=20truemm]{geometry}
+\usepackage{natbib}
 
 \begin{document}
 
@@ -12,6 +13,9 @@
 
 \section{Introduction}
 
-This is a test.
+This is a test. \citet{knittel2018working}
+
+\bibliography{main}
+\bibliographystyle{aer}
 
 \end{document}
