--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 
 \section{Introduction}
 
-This is a test. \citet{knittel2018working}
+This is a test \citep{knittel2018working}.
 
 \bibliography{main}
 \bibliographystyle{aer}
