Make a beamer file

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \title{A test document}
+\author{Shota Komatsu}
 \date{\today}
 
 \usepackage{comment}
@@ -17,5 +18,6 @@ This is a test \citep{knittel2018working}.
 
 \bibliography{main}
 \bibliographystyle{aer}
+
 
 \end{document}
